# bookmarko

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  NEW_README.md  README.md  config.py.example  deploy_zero_downtime.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  ff_bookmarks_json.py  pyproject.toml  pytest.ini  requirements.txt  requirements_freeze.txt  run.py
.github/workflows/: deploy.yml  tests.yml
browser-extension/: README.md  manifest.json  popup.css  popup.html  popup.js
doc/: chat-llm-flow.md
docker-initdb.d/: 01-init.sql
flaskmarks/: __init__.py  cli.py
flaskmarks/api/: __init__.py  auth.py  docs.py  errors.py  marks.py  openapi.yaml  quickadd.py  serializers.py  tags.py
flaskmarks/core/: __init__.py  blueprints.py  error.py  extensions.py  filters.py  html_sanitizer.py  import_job_status_service.py  marks_import_thread.py  setup.py  theme_utils.py  url_fetch_validation.py  youtube.py
flaskmarks/forms/: __init__.py  chat.py  mark.py  user.py
flaskmarks/models/: __init__.py  import_job_status.py  mark.py  tag.py  user.py
flaskmarks/templates/: base.html  flash.html  navbar.html  searchform.html
flaskmarks/views/: __init__.py  auth.py  chat.py  error.py  marks.py  profile.py  tags.py
tests/: README.md  __init__.py  conftest.py  test_config_and_import_status_isolation.py  test_external_html_sanitization.py  test_fetch_path_url_targets.py  test_mark_creation_request_path.py  test_mark_mutation_security.py  test_stored_xss_regression.py  test_tag_count_pagination_ordering.py
tests/auth/: README.md  (+2 more)
(+78 files in other folders)
