[project]
name = "bookmarko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql>=0.0.3",
    "mysqlclient>=2.2.7",
    "pip-audit>=2.10.0",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy-fulltext-search>=0.3.0",
]
